--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-minimal
 title: Enzeru's homepage
 description: Where all my links are indexed to!
+remote_theme: pages-themes/time-machine@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
