--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Enzeru's homepage
 description: Where all my links are indexed to!
-remote_theme: pages-themes/time-machine@v0.2.0
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
